traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    left()
    ^Snake:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    right()
    ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return ((getDirection() == Direction.EAST) && isFacingWall() && theWall) 
    ^